--- a/package.json
+++ b/package.json
@@ -6,9 +6,11 @@
   "scripts": {
     "dev": "vite",
     "build": "vite build",
-    "preview": "vite preview"
+    "preview": "vite preview",
+    "sass": "sass --watch main.scss main.css"
   },
   "devDependencies": {
+    "sass": "^1.89.2",
     "vite": "^5.3.4"
   },
   "dependencies": {
